--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <title>Musikk</title>
+  </head>
+  <body>
+    <nav class="navbar">
+      <ul class="link-group"> 
+        <li class="brand">
+          <img src="./Components/musikk-logo.png" alt="" />
+        </li>
+        <li><h2 class="logo-name">Music Player</h2></li>
+        <li class="link">
+          <a href="./index.html"><b> Home </b></a>
+        </li>
+        <li class="link">
+          <a href="./playlist.html"><b> Playlist </b></a>
+        </li>
+      </ul>
+      <ul class="secondDiv">
+        <li>
+          <input type="text" placeholder="Search" id="searchsong" />
+        </li>
+      </ul>
+    </nav>
+    <div>
+      <section class="section-side">
+        <div id="music_list">
+          <div id="structure"></div>
+        </div>
+        <div id="qd">
+          <h1></h1>
+        </div>
+        <div id="sd"><h1></h1></div>
+      </section>
+
+      <div class="songbar">
+        <input type="range" name="range" id="progress-bar" min="0" max="100" value="0" />
+        <div id="masterSongBar">
+          <div class="songInfo">
+            <p id="masterSongName">--</p>
+          </div>
+          <div class="mid_btn">
+            <audio id="player"></audio>
+            <i class="fa-solid fa-1x fa-shuffle" id="shuffle"></i>
+            <i class="fa-solid fa-2x fa-backward-fast" id="backward"></i>
+            <i class="fa-solid fa-3x fa-backward-step" id="previous"></i>
+            <i
+              class="fa-solid fa-4x fa-circle-play"
+              onclick="playandpause()"
+              id="masterPlay"
+            ></i>
+            <i class="fa-solid fa-3x fa-forward-step" id="next"></i>
+            <i class="fa-solid fa-2x fa-forward-fast" id="forward"></i>
+          </div>
+          <div class="rightbtn">
+            <span id="timeStamp">
+              <span class="current-time">00:00</span>/<span
+                class="total-duration"
+                >00:00</span
+              >
+            </span>
+            <button aria-hidden="true"
+            onclick="addToPlaylist()"
+            id="addToPlaylist"> <i class="fa fa-1x fa-th-list"></i> Add to PlayList</button>
+            <button class="addtoqueue" onclick="addQueue()">
+              Add to Queue
+            </button>
+            <button id="Queue" onclick="showQueue()">Show Queue List</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
+    <script
+      src="https://kit.fontawesome.com/4926a4df42.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/bc4963ab3c.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./App.js"></script>
+  </body>
+</html>
 
